arreglo en margenes de menu 4

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@
         font-size: 1.25rem;
     }
     .iconoMenu{
-        margin-left: 7rem;
+        padding-left: 5rem;
     }
     .menu{
         display: none;
