--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@
     .navbar{
         display: flex;
         align-items: center;
-        justify-content: space-around;
+        padding-left: 5rem;
         font-size: 1.25rem;
     }
     .iconoMenu{
